--- a/Lab2/ChallengeOne.html
+++ b/Lab2/ChallengeOne.html
@@ -21,13 +21,11 @@
 			</p>
 			<br>
 			<h2>History</h2>
-			<p>Aboriginal peoples</p>
-			<p>
+			<p>Aboriginal peoples <br>
 				Aboriginal peoples in present-day Canada include the First Nations, Inuit, and Métis,[16] the latter being a mixed-blood people who originated in the mid-17th century when First Nations and Inuit people married European settlers.[16] Archaeological studies and genetic analyses have indicated a human presence in the northern Yukon region from 13,000–12,000 BC and in southern Ontario from 7500 BC.[17][18] These first settlers entered Canada through Beringia by way of the Bering land bridge.[19]
 			</p>
 			<br>
-			<p>European colonization</p>
-			<p>
+			<p>European colonization<br>
 				The first known attempt at European colonization began when Norsemen settled briefly at L'Anse aux Meadows in Newfoundland around 1000 AD.[32] No further European exploration occurred until 1497, when Italian seafarer John Cabot explored Canada's Atlantic coast for England.[33] Then Basque and Portuguese mariners established seasonal whaling and fishing outposts along the Atlantic coast in the early 16th century.[34] In 1534, French explorer Jacques Cartier explored the St. Lawrence River, where, on July 24, he planted a 10-metre (33 ft) cross bearing the words "Long Live the King of France" and took possession of the territory in the name of King Francis I.[35]
 			</p>
 		</div>
