Changing font weigth

--- a/Lab2/ChallengeOne.html
+++ b/Lab2/ChallengeOne.html
@@ -10,7 +10,7 @@
 
 	<body>
 
-		<div style="font-family:arial">
+		<div style="font-family:arial", style="font-weight:lighter">
       <h1>Canada</h1>
       <h2>Etymology</h2>
       <p>
