Error in div styles

--- a/Lab2/ChallengeOne.html
+++ b/Lab2/ChallengeOne.html
@@ -10,7 +10,7 @@
 
 	<body>
 
-		<div style="font-family:arial", style="font-weight:100", style="margin-left: 20px;, style="margin-right: 20px;">
+		<div style="font-family:arial; font-weight:100; margin-left: 20px; margin-right: 20px;">
       <h1>Canada</h1>
       <h3>Etymology</h3>
       <p>
