--- a/Lab2/ChallengeOne.html
+++ b/Lab2/ChallengeOne.html
@@ -10,7 +10,7 @@
 
 	<body>
 
-		<div style="font-family:arial; font-weight:100; margin-left: 100px; margin-right: 100px;">
+		<div style="font-family:arial; font-weight:100; margin-left: 200px; margin-right: 200px; margin-top: 50px">
       <h1>Canada</h1>
       <h3>Etymology</h3>
       <p>
