Adding Relative links to both pages.

--- a/Lab2/ChallengeTwo/PageTwo.html
+++ b/Lab2/ChallengeTwo/PageTwo.html
@@ -11,7 +11,8 @@
 	<body>
 
 		<div>
-
+      <h1>You are currently on Page Two</h1>
+      <a href="PageOne.html">Click here to go back to page one</a>
 		</div>
 
 	</body>
