--- a/Lab2/ChallengeTwo/PageOne.html
+++ b/Lab2/ChallengeTwo/PageOne.html
@@ -11,7 +11,8 @@
 	<body>
 
 		<div>
-
+      <h1>You are currently on Page One</h1>
+      <a href="PageTwo.html">Click here for Page Two</a>
 		</div>
 
 	</body>
