Added brocks website link to both pages

--- a/Lab2/ChallengeTwo/PageTwo.html
+++ b/Lab2/ChallengeTwo/PageTwo.html
@@ -13,6 +13,7 @@
 		<div>
       <h1>You are currently on Page Two</h1>
       <a href="PageOne.html">Click here to go back to page one</a>
+      <a href="https://www.brocku.ca">Click here for Brocks Website</a>
 		</div>
 
 	</body>
