Added top page anchor

--- a/Lab2/ChallengeTwo/PageOne.html
+++ b/Lab2/ChallengeTwo/PageOne.html
@@ -10,14 +10,14 @@
 
 	<body>
 
-		<div>
+		<div style="margin-left: 400px; margin-right: 400px;">
       <h1>You are currently on Page One</h1>
       <a href="PageTwo.html">Click here for Page Two</a>
       <br>
       <a href="https://www.brocku.ca">Click here for Brocks Website</a>
       <br>
-      <br>
-      <br>
+      <a name="TopPageAnchor">
+      <br><br>
     </div>
     <div style="margin-left: 400px; margin-right: 400px; margin-top: 50px; line-height: 1.8;">
       <p>
@@ -57,6 +57,8 @@
 
         The first kangaroo to be exhibited in the Western world was an example shot by John Gore, an officer on Captain Cook's ship, HMS Endeavour, in 1770.[31][32] The animal was shot and its skin and skull transported back to England whereupon it was stuffed (by taxidermists who had never seen the animal before) and displayed to the general public as a curiosity. The first glimpse of a kangaroo for many 18th-century Britons was a painting by George Stubbs.
       </p>
+      <br>
+      <a href="#TopPageAnchor"></a>
 		</div>
 
 	</body>
