Added a text to the top page anchor link

--- a/Lab2/ChallengeTwo/PageOne.html
+++ b/Lab2/ChallengeTwo/PageOne.html
@@ -58,7 +58,7 @@
         The first kangaroo to be exhibited in the Western world was an example shot by John Gore, an officer on Captain Cook's ship, HMS Endeavour, in 1770.[31][32] The animal was shot and its skin and skull transported back to England whereupon it was stuffed (by taxidermists who had never seen the animal before) and displayed to the general public as a curiosity. The first glimpse of a kangaroo for many 18th-century Britons was a painting by George Stubbs.
       </p>
       <br>
-      <a href="#TopPageAnchor"></a>
+      <a href="#TopPageAnchor">back to the top ^</a>
 		</div>
 
 	</body>
