More line Spacing and spelling fixes

--- a/Lab2/ChallengeTwo/PageOne.html
+++ b/Lab2/ChallengeTwo/PageOne.html
@@ -13,11 +13,11 @@
 		<div style="margin-left: 400px; margin-right: 400px;">
       <a name="TopPageAnchor">
       <h1>You are currently on Page One</h1>
-      <br>
+      <br><br>
       <a href="#BottomPageAnchor">To the bottom v</a>
-      <br>
+      <br><br>
       <a href="PageTwo.html">Click here for Page Two</a>
-      <br>
+      <br><br>
       <a href="https://www.brocku.ca">Click here for Brocks Website</a>
       <br><br><br>
     </div>
@@ -67,7 +67,7 @@
 
         Brief fights are similar, except there is no forearm locking. The losing combatant seems to use kicking more often, perhaps to parry the thrusts of the eventual winner. A winner is decided when a kangaroo breaks off the fight and retreats. Winners are able to push their opponents backwards or down to the ground. They also seem to grasp their opponents when they break contact and push them away.[30] The initiators of the fights are usually the winners. These fights may serve to establish dominance hierarchies among males, as winners of fights have been seen to displace their opponent from resting sites later in the day.[30] Dominant males may also pull grass to intimidate subordinate ones.[26]
       </p>
-      <a href="#TopPageAnchor">back to the top ^</a>
+      <a href="#TopPageAnchor">To the top</a>
       <a name="BottomPageAnchor">
       <br><br><br>
 		</div>
