Attempting to add bottom margin

--- a/Lab2/ChallengeTwo/PageOne.html
+++ b/Lab2/ChallengeTwo/PageOne.html
@@ -10,7 +10,7 @@
 
 	<body>
 
-		<div style="margin-left: 400px; margin-right: 400px;">
+		<div style="margin-left: 400px; margin-right: 400px; margin-bottom: 50px;">
       <a name="TopPageAnchor">
       <h1>You are currently on Page One</h1>
       <br><br>
@@ -19,9 +19,8 @@
       <a href="PageTwo.html">Click here for Page Two</a>
       <br><br>
       <a href="https://www.brocku.ca">Click here for Brocks Website</a>
-      <br><br><br>
     </div>
-    <div style="margin-left: 400px; margin-right: 400px; margin-top: 50px; line-height: 1.8;">
+    <div style="margin-left: 400px; margin-right: 400px; margin-top: 50px; line-height: 1.8; margin-bottom: 50px;">
       <p>
         Kangaroos are four marsupials from the family Macropodidae (macropods, meaning "large foot"). In common use the term is used to describe the largest species from this family, the red kangaroo, as well as the antilopine kangaroo, eastern grey kangaroo, and western grey kangaroo.[1] Kangaroos are indigenous to Australia and New Guinea. The Australian government estimates that 42.8 million kangaroos lived within the commercial harvest areas of Australia in 2019, down from 53.2 million in 2013.[2]
 
@@ -69,7 +68,6 @@
       </p>
       <a href="#TopPageAnchor">To the top</a>
       <a name="BottomPageAnchor">
-      <br><br><br>
 		</div>
 
 	</body>
