--- a/Lab2/ChallengeTwo/PageOne.html
+++ b/Lab2/ChallengeTwo/PageOne.html
@@ -14,7 +14,7 @@
       <a name="TopPageAnchor">
       <h1>You are currently on Page One</h1>
       <br><br>
-      <a href="#BottomPageAnchor">To the bottom v</a>
+      <a href="#BottomPageAnchor">To the bottom</a>
       <br><br>
       <a href="PageTwo.html">Click here for Page Two</a>
       <br><br>
