--- a/Lab2/ChallengeTwo/PageTwo.html
+++ b/Lab2/ChallengeTwo/PageTwo.html
@@ -10,7 +10,7 @@
 
 	<body>
 
-		<div style="margin-left: 400px; margin-right: 400px; margin-bottom: 50px;>
+		<div style="margin-left: 400px; margin-right: 400px; margin-bottom: 50px;">
       <h1>You are currently on Page Two</h1>
       <br><br>
       <a href="PageOne.html">Click here to go back to page one</a>
