Trying a different type of line break

--- a/Lab2/ChallengeTwo/PageTwo.html
+++ b/Lab2/ChallengeTwo/PageTwo.html
@@ -13,9 +13,9 @@
 		<div style="margin-left: 400px; margin-right: 400px; margin-bottom: 50px;">
       <h1>You are currently on Page Two</h1>
 
-      <a href="PageOne.html">Click here to go back to page one</a>
+      <a href="PageOne.html">Click here to go back to page one <br></a>
 
-      <a href="https://www.brocku.ca">Click here for Brocks Website</a>
+      <a href="https://www.brocku.ca"><br>Click here for Brocks Website<br></a>
 
       <p style="line-height: 1.8;">
         The koala (Phascolarctos cinereus), sometimes called koala bear, is an arboreal herbivorous marsupial native to Australia. It is the only extant representative of the family Phascolarctidae and its closest living relatives are the wombats. The koala is found in coastal areas of the mainland's eastern and southern regions, inhabiting Queensland, New South Wales, Victoria, and South Australia. It is easily recognisable by its stout, tailless body and large head with round, fluffy ears
