--- a/Lab2/ChallengeTwo/PageOne.html
+++ b/Lab2/ChallengeTwo/PageOne.html
@@ -12,12 +12,15 @@
 
 		<div style="margin-left: 400px; margin-right: 400px; margin-bottom: 50px;">
 			<h1>You are currently on Page One</h1>
+
 			<a name="TopPageAnchor"/>
 
-      <a href="#BottomPageAnchor">To the bottom</a>
+			<p><a href="#BottomPageAnchor">To the bottom</a></p>
 
-      <a href="PageTwo.html">Click here for Page Two</a>
-      <a href="https://www.brocku.ca">Click here for Brocks Website</a>
+			<p><a href="PageTwo.html">Click here for Page Two</a></p>
+
+			<p><a href="https://www.brocku.ca">Click here for Brocks Website</a></p>
+      
     </div>
     <div style="margin-left: 400px; margin-right: 400px; margin-top: 50px; line-height: 1.8; margin-bottom: 50px;">
       <p>
