Changed th to td and added border

--- a/Lab2/ChallengeThree.html
+++ b/Lab2/ChallengeThree.html
@@ -10,7 +10,7 @@
 
 	<body>
 
-		<div>
+		<div style="border:1px;">
 			<p>This is a really awesome table</p>
       <table>
         <tr>
@@ -19,17 +19,17 @@
           <th>Header 1</th>
         </tr>
         <tr>
-          <th>Cell 1</th>
-          <th>Cell 2</th>
+          <td>Cell 1</td>
+          <td>Cell 2</td>
         </tr>
         <tr>
-          <th>Cell 3</th>
-          <th>Cell 4</th>
-          <th>Cell 5</th>
+          <td>Cell 3</td>
+          <td>Cell 4</td>
+          <td>Cell 5</td>
         </tr>
         <tr>
-          <th>Cell 6</th>
-          <th>Cell 7</th>
+          <td>Cell 6</td>
+          <td>Cell 7</td>
         </tr>
       </table>
 		</div>
