--- a/Lab2/ChallengeThree.html
+++ b/Lab2/ChallengeThree.html
@@ -10,7 +10,7 @@
 
 	<body>
 
-		<div style="border:1px;">
+		<div style="border:1px solid black;">
 			<p>This is a really awesome table</p>
       <table>
         <tr>
