trying a new type of border

--- a/Lab2/ChallengeThree.html
+++ b/Lab2/ChallengeThree.html
@@ -6,11 +6,17 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<meta content="en-us" http-equiv="Content-Language" />
 		<title>Challenge Three Table</title>
+    <style>
+    table, th, td {
+        border: 1px solid black;
+        border-collapse: collapse;
+    }
+    </style>
 	</head>
 
 	<body>
 
-		<div style="border:1px solid black;">
+		<div">
 			<p>This is a really awesome table</p>
       <table>
         <tr>
