--- a/Lab2/ChallengeThree.html
+++ b/Lab2/ChallengeThree.html
@@ -26,7 +26,7 @@
         </tr>
         <tr>
           <td>Cell 1</td>
-          <td>Cell 2</td>
+          <td colspan="2">Cell 2</td>
         </tr>
         <tr>
           <td>Cell 3</td>
@@ -34,7 +34,7 @@
           <td>Cell 5</td>
         </tr>
         <tr>
-          <td>Cell 6</td>
+          <td colspan="2">Cell 6</td>
           <td>Cell 7</td>
         </tr>
       </table>
