Added padding, margin and width

--- a/Lab2/ChallengeThree.html
+++ b/Lab2/ChallengeThree.html
@@ -10,15 +10,16 @@
     table, th, td {
         border: 1px solid black;
         border-collapse: collapse;
+        padding: 15px;
     }
     </style>
 	</head>
 
 	<body>
 
-		<div">
+		<div style="margin-left: 200px; margin-right: 200px; margin-top: 50px">
 			<p>This is a really awesome table</p>
-      <table>
+      <table style="width: 100%;">
         <tr>
           <th>Header 1</th>
           <th>Header 2</th>
