--- a/Lab2/ChallengeThree.html
+++ b/Lab2/ChallengeThree.html
@@ -17,9 +17,9 @@
 
 	<body>
 
-		<div style="margin-left: 200px; margin-right: 200px; margin-top: 50px">
+		<div style="margin-left: auto; margin-right: auto; margin-top: 50px">
 			<p>This is a really awesome table</p>
-      <table style="width: 50%;">
+      <table style="width: 75%;">
         <tr>
           <th>Header 1</th>
           <th>Header 2</th>
