Reverting back to older version

--- a/Lab2/ChallengeThree.html
+++ b/Lab2/ChallengeThree.html
@@ -17,7 +17,7 @@
 
 	<body>
 
-		<div style="position: absolute; margin-top: 50px">
+		<div style="margin-left: 200px; margin-right: 200px; margin-top: 50px">
 			<p>This is a really awesome table</p>
       <table style="width: 75%;">
         <tr>
