--- a/Lab2/ChallengeThree.html
+++ b/Lab2/ChallengeThree.html
@@ -11,14 +11,15 @@
         border: 1px solid black;
         border-collapse: collapse;
         padding: 5px;
+        text-align: left;
     }
     </style>
 	</head>
 
 	<body>
 
-		<div style="margin-left: 400px; margin-top: 50px">
-			<p>This is a really awesome table</p>
+		<div style="margin-left: 350px; margin-top: 50px">
+			<p style="text-align: center;">This is a really awesome table</p>
       <table style="width: 60%;">
         <tr>
           <th>Header 1</th>
