--- a/Lab2/ChallengeThree.html
+++ b/Lab2/ChallengeThree.html
@@ -18,8 +18,8 @@
 
 	<body>
 
-		<div style="margin-left: 350px; margin-top: 50px">
-			<p style="text-align: center;">This is a really awesome table</p>
+		<div style="margin-left: 375px; margin-top: 50px">
+			<p>This is a really awesome table</p>
       <table style="width: 60%;">
         <tr>
           <th>Header 1</th>
