Trying to update list

--- a/Lab2/ChallengeFour.html
+++ b/Lab2/ChallengeFour.html
@@ -19,12 +19,17 @@
             <li>Grape</li>
             <li>Orange</li>
           </ol>
-        <li>Fruit 2</li>
-          <ul>
-            <li>Black tea</li>
-            <li>Green tea</li>
-          </ul>
         </li>
+        <li>Fruit 2
+            <li>1.
+              <ul>
+                <li>Black tea</li>
+              </ul>
+            </li>
+            <ol>
+              <li></li>
+              <li></li>
+            </ol>
         <li>Milk</li>
       </ul>
 
