--- a/Lab2/ChallengeFour.html
+++ b/Lab2/ChallengeFour.html
@@ -21,16 +21,17 @@
           </ol>
         </li>
         <li>Fruit 2
-            <li>1.
-              <ul>
-                <li>Black tea</li>
-              </ul>
-            </li>
+            <ul>
+              <li>1.
+                <ul>
+                  <li>Kiwi</li>
+                </ul>
+              </li>
+            </ul>
             <ol>
-              <li></li>
-              <li></li>
+              <li>Pinaple</li>
+              <li>Star Fruit</li>
             </ol>
-        <li>Milk</li>
       </ul>
 
 		</div>
