--- a/Lab2/ChallengeThree.html
+++ b/Lab2/ChallengeThree.html
@@ -7,7 +7,7 @@
 		<meta content="en-us" http-equiv="Content-Language" />
 		<title>Challenge Three Table</title>
     <style>
-    table, th, td {
+    th,td, table {
         border: 1px solid black;
         border-collapse: collapse;
         padding: 5px;
