Added absolute and relative links

--- a/Assignments/ExamplePage.html
+++ b/Assignments/ExamplePage.html
@@ -11,8 +11,8 @@
 	<body>
 
 		<div>
-			<p><a href="ExamplePage.html">Click this relative link.</a></p>
-			<p><a href="https://www.youtube.com/watch?v=5LKqGo7Lb4Q">Click absulute link link.</a></p>
+			<p><a href="Assignment1.html">Click here to go back</a></p>
+
 			<p>This is some awesome text</p>
 		</div>
 
