Added lists, and images

--- a/Assignments/Assignment1.html
+++ b/Assignments/Assignment1.html
@@ -13,7 +13,22 @@
 		<div>
 			<p><a href="ExamplePage.html">Click this relative link.</a></p>
 			<p><a href="https://www.youtube.com/watch?v=5LKqGo7Lb4Q">Click absulute link link.</a></p>
-			<p>This is some awesome text</p>
+			<p><br>Shopping List</p>
+		  <ul>
+		  	<li>Cat food</li>
+				<li>Coilover suspension</li>
+				<li>Honey nut cherrios</li>
+		  </ul>
+
+			<p><br>Favourite Cameras</p>
+			<ol>
+				<li>Panasonic Lumix GH6</li>
+				<li>BMPCC 6k Pro</li>
+				<li>Sony A7s iii</li>
+			</ol>
+
+			<img src="https://upload.wikimedia.org/wikipedia/commons/0/03/Toyota_SPRINTER_TRUENO_GT-APEX_%28AE86%29.jpg" alt="A car called the AE86 driving on a road." style="width:312px;height:230px;">
+			<img src="Assignments/Images/AE86.jpg" alt="A car called the AE86 is sitting in a parking lot.">
 		</div>
 
 	</body>
