--- a/Assignments/ExamplePage.html
+++ b/Assignments/ExamplePage.html
@@ -5,7 +5,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<meta content="en-us" http-equiv="Content-Language" />
-		<title>This is some awesome text</title>
+		<title>Woah, what is even this.</title>
 	</head>
 
 	<body>
@@ -13,7 +13,7 @@
 		<div>
 			<p><a href="Assignment1.html">Click here to go back</a></p>
 
-			<p>This is some awesome text</p>
+			<p>This is kinda cool but you should head back now. </p>
 		</div>
 
 	</body>
