--- a/Assignments/Assignment1.html
+++ b/Assignments/Assignment1.html
@@ -5,30 +5,56 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<meta content="en-us" http-equiv="Content-Language" />
-		<title>This is some awesome text</title>
+		<title>Toyota AE86</title>
 	</head>
 
 	<body>
 
-		<div>
-			<p><a href="ExamplePage.html">Click this relative link.</a></p>
-			<p><a href="https://www.youtube.com/watch?v=5LKqGo7Lb4Q">Click absulute link link.</a></p>
-			<p><br>Shopping List</p>
-		  <ul>
-		  	<li>Cat food</li>
-				<li>Coilover suspension</li>
-				<li>Honey nut cherrios</li>
-		  </ul>
+			<div style="margin-left: 400px; margin-right: 400px; margin-top: 50px;">
+				<a name="TopAnchor"/>
+				<h1>Toyota AE86</h1>
+				<p><a href="ExamplePage.html">Click this relative link.</a></p>
+				<p><br/>Some AE86 videos</p>
+				<ol>
+					<li><a href="https://youtu.be/tqiZL1tBn2c?si=JanKDxOzOKH3CbsB">Keiichi Tsuchiya</a></li>
+					<li><a href="https://www.youtube.com/watch?v=9qdFB_TGc9E">TRD AE86 vs Civic Type R</a></li>
+					<li><a href="https://www.youtube.com/watch?v=qZTcUswMMqg">Chester's AE86 Trueno</a></li>
+				</ol>
 
-			<p><br>Favourite Cameras</p>
-			<ol>
-				<li>Panasonic Lumix GH6</li>
-				<li>BMPCC 6k Pro</li>
-				<li>Sony A7s iii</li>
-			</ol>
+				<img src="https://upload.wikimedia.org/wikipedia/commons/0/03/Toyota_SPRINTER_TRUENO_GT-APEX_%28AE86%29.jpg" alt="A car called the AE86 driving on a road." style="width:312px;height:230px;"/>
+				<img src="Images/AE86.jpg" alt="A car called the AE86 is sitting in a parking lot." style="width:312px;height:230px;"/>
+			</div>
+			<div style="margin-left: 400px; margin-right: 400px; margin-top: 50px; line-height: 1.8; margin-bottom: 50px;">
+				<p>
+					The <strong>AE86</strong> series of the <em>Toyota Corolla Levin</em> and <em>Toyota Sprinter Trueno</em> are small, front-engine/rear-wheel-drive models within the front-engine/front-wheel-drive fifth generation Corolla (E80) range—marketed by Toyota from 1983 to 1987 in coupé and liftback configurations. Lending themselves to racing, the cars were light, affordable, easily modifiable and combined a five-speed manual transmission, optional limited slip differential, MacPherson strut front suspension, high revving (7800 rpm), twin-cam engine with oil cooler (e.g., in the US), near 50/50 front/rear weight balance, and importantly, a front-engine/rear-drive layout—at a time when this configuration was waning industry-wide. Widely popular for Showroom Stock, Group A, and Group N, Rally and Club racing, the cars' inherent qualities also earned the <strong>AE86</strong> an early and enduring international prominence in the motorsport discipline of drifting. The <strong>AE86</strong> was featured centrally in the popular, long-running Japanese manga and anime series titled Initial D (1995–2013)—as the main character's drift and tofu delivery car. In 2015, Road and Track called the <strong>AE86</strong> "a cult icon, inextricably interwoven with the earliest days of drifting."[12] The <strong>AE86</strong> would go on to inspire the Toyota 86 (2012–present),[13] a 2+2 sports car jointly developed by Toyota and Subaru, manufactured by Subaru—and 	marketed also as the Toyota GT86, Toyota FT86, Scion FR-S and Subaru BRZ. In November 2021, Toyota temporarily restarted the production of a limited number of parts for the <strong>AE86</strong>, with dealers beginning to take orders for new steering knuckle arms and rear brake calipers. Rear axle half shafts have also been scheduled for new production. Toyota has also announced that this reboot is temporary, and parts will only be available as long as stocks last.[14][15]
+				</p>
+				<p><br/>AE86 Models</p>
+		  	<ul>
+		  		<li>1983–1985 Corolla Levin GTV liftback</li>
+					<li>1983–1985 Corolla Levin GT Coupe</li>
+					<li>1984–1985 Corolla Levin GT-APEX coupé</li>
+					<li>1983–1985 Sprinter Trueno GT</li>
+					<li>1983–1985 Sprinter Trueno GT-APEX liftback</li>
+					<li>1984–1985 Sprinter Trueno AE85/86 coupé</li>
+					<li>1983 Corolla 3-door liftback</li>
+					<li>1985–1987 Toyota Corolla Levin GT-APEX liftback</li>
+					<li>1985–1987 Corolla Sport SR5 coupé</li>
+					<li>1985–1987 Sprinter Trueno GT-APEX coupé</li>
+		  	</ul>
+				<p>
+					While in production, the <strong>AE86</strong> was a popular choice for showroom stock, Group A, and Group N racing, especially in rallying and circuit races. After production ended, many private teams continued to race the <strong>AE86</strong>, and it remains a popular choice for rallying and club races today. Part of the continued appeal of the <strong>AE86</strong> for motorsports is its rear-drive configuration, not available in most newer lightweight coupes. In Group A touring car races, the car either dominated the lower category where eligible or fought it out with Honda Civics or the later <em>AE92</em>s and <em>AE101</em>s whilst maintaining its competitiveness. In Ireland, where rallying is considered one of the most popular forms of motorsport, as organizing regulations are more relaxed compared to that of other countries, the <strong>AE86</strong> was popular when new, and remains so popular that teams will purchase cars from the UK due to local shortages. The  <strong>AE86</strong> is also popular for rally use in Finland, where the cars can strongbe competitive in the F-Cup competition for naturally aspirated 2WD cars.[citation needed] The <strong>AE86</strong> was entered in the European Touring Car Championship from 1984 to 1988 with a 150 hp (112 kW) 4A-GEU engine.[citation needed] In 1986 it beat the BMW M6, BMW 325i (E30), Rover Vitesse, Volvo 240 Turbo, Merkur XR4Ti, Mazda 929, Holden Commodore (VK), Alfa Romeo 75 (turbo V6), and Mercedes 190E 2.3-16 to win the Manufacturers Championship with 267 points, surpassing the 1986 Drivers Championship Schnitzer Motorsport BMW M6.[24] In 1986 and 1987 Chris Hodgetts won the British Touring Car Championship (BTCC), beating the V8 Rover SD1's, Ford Sierra Cosworth's and BMW 3 Series (E30) M3's two years running for an overall points victory driving an <strong>AE86</strong> for Toyota (GB) PLC and his own race prep team CHMS.[25] The semi-factory supported Kraft team entered a spaceframe Trueno in the JGTC for the GT300 regulations in 1999. The <em>Trueno</em> used a Dallara F3 chassis and was powered with a 3S-GTE engine that came from a SW20 MR2 Turbo that produces about 300 hp (224 kW). Despite being popular with the fans, the car had minor success and was abandoned from use halfway through the 2001 season when the AE86 burst into flames during the third round of the season at Sugo. Kraft subsequently replaced it with the newly-delivered Toyota MR-S.[26][27] The rear wheel drive configuration, combined with the AE86's light weight (approximately 2300 lb (950–970 kg) curb weight), balance and relatively powerful (and easy to tune) 4A-GEU engine made it popular among the Japanese hashiriya (street racers in Japanese), many of whom raced in touge (mountain passes in Japanese) where the corners suited the <strong>AE86</strong> best, especially on the downhill.[19] Among those who utilized this car was Japanese racing legend Keiichi Tsuchiya also known as the Drift King ("Dori-Kin" in Japanese). Keiichi Tsuchiya helped popularize the sport of drifting, which involves taking a car on a set of controlled slides through corners.[19] The <strong>AE86</strong>'s FR configuration made it well suited to this kind of cornering, and currently the car is a mainstay of drift shows and competitions. Japanese drifters like Katsuhiro Ueo, Toshiki Yoshioka, Yoichi Imamura, Koichi Yamashita, Hiroshi Takahashi, Tetsuya Hibino, and Wataru Hayashi were also involved in making the <strong>AE86</strong> famous in the drift scene.[citation needed] <strong>AE86</strong>s around the world have been extensively modified for use in professional drifting.[28]
+				</p>
+				<p><em>All text and car info came from wikipedia</em></p>
+				<h2>Image board</h2>
+				<img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Toyota_SPRINTER_TRUENO_3door_%28AE86%29_rear.JPG" alt="AE86 trunk view" style="width:312px;height:230px;"/>
+				<img src="https://upload.wikimedia.org/wikipedia/commons/1/13/Toyota_AE86_BEV_CONCEPT_%281%29.jpg" alt="Hood open on the AE86" style="width:312px;height:230px;"/>
+				<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTf1tlodTCKrVe8iLpwqklhFTCq_ut22mMJ6A" alt="Red AE86" style="width:312px;height:230px;"/>
+				<img src="https://upload.wikimedia.org/wikipedia/commons/9/90/Toyota_E-AE86_Sprinter_Trueno_GT_APEX_%2822010314080%29.jpg" alt="AE86 under covered roof" style="width:312px;height:230px;"/>
+				<img src="https://live.staticflickr.com/5712/30626562716_9f03611d1a_b.jpg" alt="AE86 driving in the city" style="width:312px;height:230px;"/>
+				<img src="https://live.staticflickr.com/4143/4788466628_877a879299_b.jpg" alt="Black AE86" style="width:312px;height:230px;"/>
 
-			<img src="https://upload.wikimedia.org/wikipedia/commons/0/03/Toyota_SPRINTER_TRUENO_GT-APEX_%28AE86%29.jpg" alt="A car called the AE86 driving on a road." style="width:312px;height:230px;">
-			<img src="Assignments/Images/AE86.jpg" alt="A car called the AE86 is sitting in a parking lot.">
-		</div>
+				<a href="#TopAnchor"><br/>Click to go to top.</a>
+			</div>
 
-	</body>
+		</body>
+</html>
