--- a/Lab3/Challenge2/Challenge2.html
+++ b/Lab3/Challenge2/Challenge2.html
@@ -5,16 +5,18 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<meta content="en-us" http-equiv="Content-Language" />
 		<title>Lab 3 Challenge 2</title>
-		<link href="https://brightspace.brocku.ca/content/enforced/46547-2022-FW-D02-S02-IASC-1P02-ASY/Module 3/style.css" type="text/css" rel="stylesheet" />
+		<link href="style.css" type="text/css" rel="stylesheet" />
 	</head>
 
 	<body>
-		<!--The body contains all of the content for our page-->
 
 		<div>
-			<p>This is some awesome text</p>
+			<ul>
+				<li>Apples</li>
+				<li>Bananas</li>
+				<li>Oranges</li>
+			</ul>
 		</div>
-
 
   </body>
 </html>
