--- a/Lab3/Challenge3/Challenge3.html
+++ b/Lab3/Challenge3/Challenge3.html
@@ -5,16 +5,15 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<meta content="en-us" http-equiv="Content-Language" />
 		<title>Lab 3 Challenge 3</title>
-		<link href="https://brightspace.brocku.ca/content/enforced/46547-2022-FW-D02-S02-IASC-1P02-ASY/Module 3/style.css" type="text/css" rel="stylesheet" />
+		<link href="style.css" type="text/css" rel="stylesheet" />
 	</head>
 
 	<body>
-		<!--The body contains all of the content for our page-->
 
 		<div>
-			<p>This is some awesome text</p>
+			<p>Here is a bunch of text. I think I am going to have to edit my css and change the font of this text.</p>
+			<img src="https://live.staticflickr.com/6190/6059396161_0c2f4a9a9f_b.jpg" alt="Electric power on the moon"/>
 		</div>
-
 
   </body>
 </html>
