--- a/Lab4/Challenge1/Challenge1.html
+++ b/Lab4/Challenge1/Challenge1.html
@@ -5,13 +5,21 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<meta content="en-us" http-equiv="Content-Language" />
 		<title>Challenge1</title>
-		<link href="Challenge1.css" type="text/css" rel="stylesheet" />
+		<link href="style.css" type="text/css" rel="stylesheet" />
 	</head>
 	<body>
 
-		<div>
-			<p>This is some awesome text</p>
-		</div>
+    <div class="main-div">
+
+      <div class="text-box">
+        <p>This is some awesome text</p>
+      </div>
+
+      <div class="img-box">
+        <img src="boomer.jpg" alt="The brock badgers mascott.">
+      </div>
+
+    </div>
 
   </body>
 </html>
