--- a/Lab4/Challenge3/Challenge3.html
+++ b/Lab4/Challenge3/Challenge3.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<meta content="en-us" http-equiv="Content-Language" />
 		<title>Challenge3</title>
-		<link href="Challenge1.css" type="text/css" rel="stylesheet" />
+		<link href="style.css" type="text/css" rel="stylesheet" />
 	</head>
 	<body>
 
