Added margin, padding and borders to challenge 1

--- a/Lab4/Challenge1/Challenge1.html
+++ b/Lab4/Challenge1/Challenge1.html
@@ -12,7 +12,7 @@
     <div class="main-div">
 
       <div class="text-box">
-        <p>This is some awesome text</p>
+        <p>This is text</p>
       </div>
 
       <div class="img-box">
