added some style to challenge 2

--- a/Lab4/Challenge2/Challenge2.html
+++ b/Lab4/Challenge2/Challenge2.html
@@ -8,10 +8,9 @@
 		<link href="style.css" type="text/css" rel="stylesheet" />
 	</head>
 	<body>
-
-		<div>
-			<p>This is some awesome text</p>
-		</div>
-
+			<p class="content">This is some content</p>
+			<p class="text">This is some text</p>
+			<p class="more-text">More <span id="super">text</span> than before</p>
+			<p class="not-more">I can't believe it's not more text</p>
   </body>
 </html>
