--- a/Lab4/Challenge2/Challenge2.html
+++ b/Lab4/Challenge2/Challenge2.html
@@ -11,6 +11,6 @@
 			<p class="content">This is some content</p>
 			<p class="text">This is some text</p>
 			<p class="more-text">More <span id="super">text</span> than before</p>
-			<p class="not-more">I can't believe it's not more text</p>
+			<p class="not-more">I <span id="yellow">can't</span> believe it's not more text</p>
   </body>
 </html>
