--- a/Lab4/Challenge3/Challenge3.html
+++ b/Lab4/Challenge3/Challenge3.html
@@ -8,10 +8,14 @@
 		<link href="style.css" type="text/css" rel="stylesheet" />
 	</head>
 	<body>
+    <div class="main">
+      <div class="nested">
+        <p id="orange">This is the first box</p>
+        <p id="green">This is also in the first box</p>
+      </div>
 
-		<div>
-			<p>This is some awesome text</p>
-		</div>
+      <p id="purple">This is some awesome text</p>
+    </div>
 
   </body>
 </html>
