--- a/Lab5/Challenge1/Challenge1.html
+++ b/Lab5/Challenge1/Challenge1.html
@@ -11,7 +11,9 @@
 
     <div class="wrapper">
 
-
+      <div id="header"> <h3>This is my page header</h3> </div>
+      <div id="body">This is my left side</div>
+      <div id="footer">This is the footer</div>
 
     </div>
 
