--- a/Lab5/Challenge2/Challenge2.html
+++ b/Lab5/Challenge2/Challenge2.html
@@ -9,9 +9,13 @@
 	</head>
 	<body>
 
-    <div class="wrapper">
+    <div id="wrapper">
 
-
+      <div id="header"><h2>This is the title</h2> </div>
+      <div id="leftbody"><h3>This is the first nav</h3></div>
+      <div id="rightbody"><h3>This is the first nav</h3></div>
+      <div id="content"><h3>This is the content</h3></div>
+      <div id="footer"><h3 class="footer-text">This is the footer</h3></div>
 
     </div>
 
