--- a/Lab5/Challenge3/Challenge3.html
+++ b/Lab5/Challenge3/Challenge3.html
@@ -11,7 +11,9 @@
 
     <div class="wrapper">
 
-
+      <div id="left-box">Content 1</div>
+      <div id="right-box">Content 2</div>
+      <div id="center-box">Content 3</div>
 
     </div>
 
