--- a/Assignments/Assignment2/Assignment2.html
+++ b/Assignments/Assignment2/Assignment2.html
@@ -9,10 +9,63 @@
 	</head>
 
   <body>
-		<div>
-			<p>This is some awesome text</p>
-		</div>
+    <div class="main">
+      <a name="TopPage"></a>
+      <h1>90's Acura Integra</h1>
+      <ul class="unordered">
+        <li><a href="https://www.youtube.com/watch?v=rGZ1EpZ9zKQ">K Swap; Honda Integra Type R DC2</a></li>
+        <li><a href="https://www.youtube.com/watch?v=iYo99ULNJUc">Midnight Marauder | Zosh's Integra</a></li>
+        <li><a href="https://www.youtube.com/watch?v=WbkmPM2cl-A">Touge run. | Honda Integra DC2 Type-R JDM</a></li>
+      </ul>
+
+  		<div id="intro">
+  			<p>
+          The Honda Integra (Japanese: ホンダ インテグラ, Hepburn: Honda Integura), marketed in North America as the Acura Integra, is an automobile produced by the Japanese automobile manufacturer Honda from 1985 until 2006, and then since 2021. It succeeded the Quint as a more luxurious and sport-oriented derivative of the Civic. The Integra was one of the launch models for Acura in the US in 1986 alongside the Acura Legend. Throughout its production run, the Integra was highly regarded for its handling and performance. The 1995–2001 Integra Type R is widely regarded as one of the best front-wheel-drive cars of all time. The Integra nameplate was revived in 2021 after a 16-year hiatus. The Honda Integra nameplate is used for a restyled Honda Civic sedan for the Chinese market, while the Acura Integra nameplate is used for a Civic-based liftback for North America, replacing the Acura ILX.
+        </p>
+  		</div>
+
+      <div class="typer">
+        <h2>Type R</h2>
+        <p>
+          In 1995, Honda introduced the Integra Type R to the Japanese domestic market. The Japanese specification Type R came standard with a 147 kW (200 PS; 197 hp) factory-tuned variant of the B18C engine. Power figures varied slightly between markets, with USDM cars putting out 145 kW (198 PS; 195 hp) and UK-spec cars making 139 kW (190 PS; 187 hp). Equipped with a close-ratio 5-speed manual transmission and a helical-type limited-slip differential, the Integra Type R had significantly improved performance and handling relative to the GS-R/Si/SiR-G Integra. These were the result of extensive changes, including a strengthened chassis with extra spot welds and thicker metal around the rear shock towers and lower subframe, weight reduction (reduced sound insulation, 10 percent thinner windscreen, lighter wheels), more power, rev limiter set at 8,600 rpm JDM (8,500 rpm USDM, 8,700 rpm UKDM), hand-built engine featuring hand-polished and ported intake ports, high-compression pistons, undercut valves and revised intake and exhaust systems, and suspension upgrades. The result was a capable sports liftback which was acclaimed by motoring journalists worldwide. The JDM version was significantly lighter than the SiR Integra (The 96–97 spec model could delete the air bags, air conditioning, rear wiper, radio, center console, clock, power steering and anti-lock brakes), However, there is only a 33 lb[citation needed] (15 kg) net weight difference between the USDM Integra Type R and the Integra GS-R because the extra metal and cross bracing in the Type R negate much of the 98 lb of weight reductions. The Type R was the only Type R ever sold in North America with the Acura badge. For the European, Australian and New Zealand market, the Integra was sold as a Honda with the four headlight front-end design. The JDM Type R received significant upgrades in 1998 and is known as the '98 Spec R. Some of the main changes were a redesigned rear bumper, 16-inch wheels with 215/45R16 tires, 5-lug nut wheel hubs and bigger brakes. Gear ratios for the final drive were higher, making 1st to 3rd gears closer, while 4th and 5th were longer to maintain the '96 Spec cruising comfort. The engine power remained the same, but use of a new 4–1 long tube header brought torque lower down to 6,200 rpm. A final revision of the JDM Type R known as the '00 Spec R included a revised intake camshaft, and more finely balanced drive shafts. A final trim version offered in mid-2000 onwards for the JDM market (known as the "Type Rx") came factory fitted with motorized folding mirrors, dashboard clock, blue-hue carbon trim interiors, and an audio system as part of the standard package.
+        </p>
+      </div>
 
 
+      <div class="imagepanel">
+        <h2>Images</h2>
+        <div class="images">
+          <img src="https://media.carsandbids.com/cdn-cgi/image/width=2080,quality=70/c51905b0000b639a185eeb080dd879bf007f5604/photos/36dM4oWB.ttxgZsjbr-(edit).jpg?t=163530874837" alt="Picture of white integra"/>
+          <img src="Images/integra2.jpg" alt="Picture of white integra 2"/>
+          <img src="Images/integra3.jpg" alt="Picture of white integra 3"/>
+          <img src="https://media.fastestlaps.com/honda-integra-type-r.jpg" alt="Picture of white integra 4"/>
+        </div>
+        <a href="imageboard.html">more images</a>
+      </div>
+
+      <div class="builds">
+        <h3>Top 5 Integra builds</h3>
+        <ol>
+          <li><a href="https://www.motortrend.com/features/1803-1996-honda-integra-type-r-living-the-dream/">1996 Honda Integra Type R</a></li>
+          <li><a href="https://www.motortrend.com/features/1803-1992-acura-integra-gs-r-strategic-migration/">1992 Acura Integra GS-R</a></li>
+          <li><a href="https://www.motortrend.com/features/1706-2000-acura-integra-type-r-brand-loyalty/">2000 Acura Integra Type R</a></li>
+          <li><a href="https://www.motortrend.com/features/1708-1995-acura-integra-gs-r-natural-progression/">1995 Acura Integra GS-R</a></li>
+          <li><a href="https://www.motortrend.com/features/1806-1998-honda-integra-sedan-the-atypical-mentality/">1998 Honda Integra Sedan</a></li>
+        </ol>
+      </div>
+
+      <div class="trims">
+        <h3>Different Trims</h3>
+        <p>
+          RS: Rally Sport was available in both liftback and sedan. There was no sedan available in 1998. Model dropped in 1999. In 1994, equipped with the 1.8-liter DOHC (B18B1) 4-cylinder engine producing 142 hp (106 kW; 144 PS) and 137 lb⋅ft (186 N⋅m) of torque. RS models were the predecessor to the Type R model that was released in 1997.[citation needed] In 1995, power ratings dropped to 148 hp (110 kW; 150 PS) and 124 lb⋅ft (168 N⋅m) of torque due to U.S. emissions regulations. Standard features were a cassette player, rear-window defroster, and tilt steering wheel. The cassette player was replaced with a CD player in 1997. The RS models as well as Type Rs did not come with moonroofs as an option, while the LS, SE, GS, and GS-R sub-models did. LS: Luxury Sport, was available in both liftback and sedan a leather-wrapped steering wheel and shift knob. SE: Special Edition, was available in both liftback and sedan starting from 1995. This trim package was only available in 1995 and 1996 model years until they were changed to be named the GS in 1997. From the LS, it added leather seats, alloy wheels on all years, and a rear-wing spoiler (optional). GS: Grand Sport, was available in both liftback and sedan starting from 1997. Same standard features as the SE. Including a rear spoiler. GS-R: Grand Sport Racing, was available in both liftback and sedan. Equipped with the 1.8-liter DOHC VTEC (B18C1) 4-cylinder engine producing 170 hp (127 kW; 172 PS) and 128 lb⋅ft (174 N⋅m) of torque. It came equipped with a rear spoiler, 6-speaker stereo, power moonroof, 195/55/VR15 tires and alloy wheels. The leather option package would add leather upholstery, leather-wrapped steering wheel and shift knob. An automatic transmission is an option in certain markets for this model. Type R (1997-1998 and 2000-2001): was only available as a liftback. Equipped with the 1.8-liter DOHC VTEC (B18C5) 4-cylinder engine producing 195 hp (145 kW; 198 PS) limited-slip differential, unique interior trim, front spoiler, high rear wing, Type R badging, lowered sport suspension, and unique 7-spoke 5-lug 15-inch alloy wheels. Deletes air conditioning, leather upholstery, tilt/height adjustable driver seat, visor mirrors, power moonroof, and cruise control. Air conditioning would be a dealer-installed option.
+        </p>
+        <a href="#TopPage">Click to go up.</a>
+      </div>
+      <div class="imgBox">
+        <img id="img1" src="https://static.wikia.nocookie.net/forzamotorsport/images/a/ab/HOR_XB1_Acura_Integra.png/revision/latest?cb=20190915221333" alt="integra with transparent background 1"/>
+        <img id="img2" src="https://i.pinimg.com/1200x/91/28/03/912803aebd23b36046013a42b6cd50fb.jpg" alt="integra with transparent background 2"/>
+        <img id="img3" src="https://cdn.trackdays.co.uk/cdn-cgi/image/format=auto,fit=contain/cars/honda-honda-integra-dc2.png" alt="integra with transparent background 3"/>
+      </div>
+    </div>
   </body>
 </html>
