Fixed two photos

--- a/Assignments/Assignment2/Assignment2.html
+++ b/Assignments/Assignment2/Assignment2.html
@@ -38,7 +38,7 @@
           <img src="https://media.carsandbids.com/cdn-cgi/image/width=2080,quality=70/c51905b0000b639a185eeb080dd879bf007f5604/photos/36dM4oWB.ttxgZsjbr-(edit).jpg?t=163530874837" alt="Picture of white integra"/>
           <img src="Images/integra2.jpg" alt="Picture of white integra 2"/>
           <img src="Images/integra3.jpg" alt="Picture of white integra 3"/>
-          <img src="https://media.fastestlaps.com/honda-integra-type-r.jpg" alt="Picture of white integra 4"/>
+          <img src="Images/integra6.jpg" alt="Picture of white integra 4"/>
         </div>
         <a href="imageboard.html">more images</a>
       </div>
@@ -62,7 +62,7 @@
         <a href="#TopPage">Click to go up.</a>
       </div>
       <div class="imgBox">
-        <img id="img1" src="https://static.wikia.nocookie.net/forzamotorsport/images/a/ab/HOR_XB1_Acura_Integra.png/revision/latest?cb=20190915221333" alt="integra with transparent background 1"/>
+        <img id="img1" src="Images/integra5.png" alt="integra with transparent background 1"/>
         <img id="img2" src="https://i.pinimg.com/1200x/91/28/03/912803aebd23b36046013a42b6cd50fb.jpg" alt="integra with transparent background 2"/>
         <img id="img3" src="https://cdn.trackdays.co.uk/cdn-cgi/image/format=auto,fit=contain/cars/honda-honda-integra-dc2.png" alt="integra with transparent background 3"/>
       </div>
