--- a/Lab8/lab8cc2/lab8cc2.html
+++ b/Lab8/lab8cc2/lab8cc2.html
@@ -3,24 +3,24 @@
 
 <head>
 	<meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
-	<title>Advanced Example</title>	
-	
-	<script type="text/javascript" src="scripts.js"></script>
-	
+	<title>Advanced Example</title>
+
+
+
 </head>
 
 <body>
 
-	<button onclick="mix">Change Colours</button>
+	<button type="button" onclick="mix()">Change Colours</button>
 
 	<p id="blue">Blue Here</p>
-	
-	<p id="greeen">Green Here</p>
-	
-	<p id="red">Red Here</p>		
-	
 
-	
+	<p id="green">Green Here</p>
+
+	<p id="red">Red Here</p>
+
+
+
 </body>
-
+<script type="text/javascript" src="scripts.js"></script>
 </html>
