--- a/Lab8/lab8cc3/lab8cc3.html
+++ b/Lab8/lab8cc3/lab8cc3.html
@@ -5,16 +5,16 @@
 	<meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 	<title>Advanced Example</title>
 	<script type="text/javascript" src="scripts.js"></script>
-	
+
 </head>
 
 
 
-<p><button onclick="theRest(">Print the last one</button></p>
+<p><button type="button" onclick="theRest()">Print the last one</button></p>
 
 <p id="output1">Output One Here</p>
 
-<p id="output2>Output Two Here</p>
+<p id="output2">Output Two Here</p>
 
 <p id="output3"></p>
 
