Finished 3 menu items

--- a/Assignments/Assignment3/main.html
+++ b/Assignments/Assignment3/main.html
@@ -22,55 +22,43 @@
       <table>
         <tr class="tr">
           <th id="img1"><img src="Images/Edited/image1.png" alt=""/></th>
-          <th id="text1">
-            <h1>Wood charcoal</h1>
+          <td id="text1">
+            <h1>Cooking Charcoal</h1>
               <ul id="ul1">
-                <li>High-Quality Charcoal: <br/> Premium, all-natural charcoal <br/>for superior grilling results.</li>
-                <li>Quick Ignition: <br/>Easy-to-light charcoal ensures a fast <br/>and effortless grilling experience.</li>
-                <li>Enhanced Flavor: <br/>Iåmparts a delicious smoky taste to <br/>your grilled dishes, elevating the overall flavor.</li>
-                <li>Eco-Friendly: <br/>Made from sustainable sources, <br/>reducing your environmental impact.</li>
-              </ul>
-          </th>
-        </tr>
-        <tr>
-          <td id="img2"><img src="Images/Edited/image2.png" alt=""/></td>
-          <td id="text2">
-            <h1>Wood charcoal</h1>
-              <ul id="ul2">
-                <li>High-Quality Charcoal: <br/> Premium, all-natural charcoal <br/>for superior grilling results.</li>
-                <li>Quick Ignition: <br/>Easy-to-light charcoal ensures a fast <br/>and effortless grilling experience.</li>
-                <li>Enhanced Flavor: <br/>Iåmparts a delicious smoky taste to <br/>your grilled dishes, elevating the overall flavor.</li>
-                <li>Eco-Friendly: <br/>Made from sustainable sources, <br/>reducing your environmental impact.</li>
+                <li><span>High-Quality Charcoal:</span><br/>Premium, all-natural charcoal <br/>for superior grilling results.</li>
+                <li><span>Quick Ignition:</span> <br/>Easy-to-light charcoal ensures a fast <br/>and effortless grilling experience.</li>
+                <li><span>Enhanced Flavor:</span> <br/>Iåmparts a delicious smoky taste to <br/>your grilled dishes, elevating the overall flavor.</li>
+                <li><span>Eco-Friendly:</span><br/>Made from sustainable sources, <br/>reducing your environmental impact.</li>
               </ul>
           </td>
         </tr>
         <tr>
-          <td id="img3"><img src="Images/Edited/image3.png" alt=""/></td>
+          <th id="img2"><img src="Images/Edited/image2.png" alt=""/></th>
+          <td id="text2">
+            <h1>Fire Starter</h1>
+              <ul id="ul2">
+                <li><span>Efficient Fire Starting:</span> <br/>Our fire starter product ignites <br/>quickly and easily, allowing you to start <br/>fires effortlessly in various settings.</li>
+                <li><span>Reliable Ignition:</span> <br/>Dependable ignition source, ensuring <br/>a consistent and robust flame for <br/>your firewood, charcoal, or campfire.</li>
+                <li><span>Long Burn Time:</span> <br/>Provides extended burn time, giving you ample <br/>opportunity to get your fire going and keep it roaring.</li>
+                <li><span>Versatile Use:</span> <br/>Perfect for lighting fireplaces, grills, wood stoves, <br/>and campfires, making it a must-have <br/>for outdoor enthusiasts and home users alike.</li>
+              </ul>
+          </td>
+        </tr>
+        <tr>
+          <th id="img3"><img src="Images/Edited/image3.png" alt=""/></th>
           <td id="text3">
-            <h1>Wood charcoal</h1>
+            <h1>Fire Flare</h1>
               <ul id="ul3">
-                <li>High-Quality Charcoal: <br/> Premium, all-natural charcoal <br/>for superior grilling results.</li>
-                <li>Quick Ignition: <br/>Easy-to-light charcoal ensures a fast <br/>and effortless grilling experience.</li>
-                <li>Enhanced Flavor: <br/>Iåmparts a delicious smoky taste to <br/>your grilled dishes, elevating the overall flavor.</li>
-                <li>Eco-Friendly: <br/>Made from sustainable sources, <br/>reducing your environmental impact.</li>
+                <li><span>Instant Illumination:</span> <br/>Provides immediate, high-intensity light <br/>in emergencies for visibility and safety.</li>
+                <li><span>Ultra-Bright Flames:</span> <br/>Intense, visible flames can be seen <br/>from a distance, ideal for signaling.</li>
+                <li><span>Long-Lasting:</span> <br/>Offers extended burn time, ensuring a prolonged <br/>and visible signal in critical situations.</li>
+                <li><span>Compact and Portable:</span> <br/>Small, lightweight design for easy storage <br/>in cars, backpacks, or emergency kits.</li>
               </ul>
           </td>
         </tr>
       </table>
-      <!--
-      <div class="item1">
-        <img src="Images/Edited/image1.png" alt=""/>
-        <p>- classic wood grill charcole</p>
-      </div>
-
-      <div class="item2">
-        <img src="Images/Edited/image2.png" alt=""/>
-      </div>
-      <div class="item3">
-        <img src="Images/Edited/image3.png" alt=""/>
-      </div>
-      -->
     </div>
+
 
     <div class="footer">
       <h4 id="email">Email: admin@patimex.com</h4>
