done second menu - six items completed

--- a/Assignments/Assignment3/main.html
+++ b/Assignments/Assignment3/main.html
@@ -35,24 +35,66 @@
         <tr>
           <th id="img2"><img src="Images/Edited/image2.png" alt=""/></th>
           <td id="text2">
-            <h1>Fire Starter</h1>
+            <h1>White Kindling</h1>
               <ul id="ul2">
-                <li><span>Efficient Fire Starting:</span> <br/>Our fire starter product ignites <br/>quickly and easily, allowing you to start <br/>fires effortlessly in various settings.</li>
-                <li><span>Reliable Ignition:</span> <br/>Dependable ignition source, ensuring <br/>a consistent and robust flame for <br/>your firewood, charcoal, or campfire.</li>
-                <li><span>Long Burn Time:</span> <br/>Provides extended burn time, giving you ample <br/>opportunity to get your fire going and keep it roaring.</li>
-                <li><span>Versatile Use:</span> <br/>Perfect for lighting fireplaces, grills, wood stoves, <br/>and campfires, making it a must-have <br/>for outdoor enthusiasts and home users alike.</li>
+                <li><span>Quick Ignition:</span> <br/>Ignites rapidly, reducing wait time and <br/>making fire-starting effortless.</li>
+                <li><span>Clean Burning:</span> <br/>Produces minimal smoke and residue, ensuring a <br/>cleaner, environmentally friendly fire experience.</li>
+                <li><span>Efficient Firestarter:</span> <br/>Enhances fire efficiency, promoting a consistent and <br/>reliable burn for various applications.</li>
+                <li><span>Versatile Use:</span> <br/>Perfect for camping, barbecues, and indoor <br/>heating, catering to a range of outdoor <br/>and home activities with ease.</li>
               </ul>
           </td>
         </tr>
         <tr>
           <th id="img3"><img src="Images/Edited/image3.png" alt=""/></th>
           <td id="text3">
-            <h1>Fire Flare</h1>
+            <h1>Ecological Kindling</h1>
               <ul id="ul3">
-                <li><span>Instant Illumination:</span> <br/>Provides immediate, high-intensity light <br/>in emergencies for visibility and safety.</li>
-                <li><span>Ultra-Bright Flames:</span> <br/>Intense, visible flames can be seen <br/>from a distance, ideal for signaling.</li>
-                <li><span>Long-Lasting:</span> <br/>Offers extended burn time, ensuring a prolonged <br/>and visible signal in critical situations.</li>
-                <li><span>Compact and Portable:</span> <br/>Small, lightweight design for easy storage <br/>in cars, backpacks, or emergency kits.</li>
+                <li><span>Eco-Friendly:</span> <br/>Crafted from sustainable materials, <br/>reducing your environmental impact.</li>
+                <li><span>Quick Ignition:</span> <br/>Swift and hassle-free fire-starting <br/>without harmful chemicals.</li>
+                <li><span>Clean Burning:</span> <br/>Minimal smoke and residue, ensuring <br/>a greener experience.</li>
+                <li><span>Versatile:</span> <br/> Ideal for camping, picnics, and outdoor gatherings.</li>
+              </ul>
+          </td>
+        </tr>
+      </table>
+    </div>
+
+    <div class="main2">
+      <table>
+        <tr class="tr">
+          <th id="img32"><img src="Images/Edited/image3.png" alt=""/></th>
+
+          <td id="text32">
+            <h1>Charcoal Briquettes</h1>
+              <ul id="ul32">
+                <li><span>High-Quality Briquettes:</span> <br/>Premium charcoal briquettes for consistent heat <br/>and optimal grilling results.</li>
+                <li><span>Long Burn Time:</span> <br/>Extended burn duration for prolonged cooking <br/>sessions, ensuring your barbecue stays hot.</li>
+                <li><span>Even Heat Distribution:</span> <br/>Provides uniform heat across the grill, <br/>preventing unevenly cooked food.</li>
+                <li><span>Low Ash Production:</span> <br/>Minimal ash residue for easy cleanup after <br/>grilling, saving you time and effort.</li>
+              </ul>
+          </td>
+        </tr>
+        <tr>
+          <th id="img22"><img src="Images/Edited/image2.png" alt=""/></th>
+          <td id="text22">
+            <h1>Large Eco Kindling</h1>
+              <ul id="ul22">
+                <li><span>Eco-Friendly:</span> <br/>Crafted from sustainable materials, <br/>reducing your environmental impact.</li>
+                <li><span>Quick Ignition:</span> <br/>Swift and hassle-free fire-starting <br/>without harmful chemicals.</li>
+                <li><span>Clean Burning:</span> <br/>Minimal smoke and residue, ensuring <br/>a greener experience.</li>
+                <li><span>Versatile:</span> <br/> Ideal for camping, picnics, and outdoor gatherings.</li>
+              </ul>
+          </td>
+        </tr>
+        <tr>
+          <th id="img12"><img src="Images/Edited/image1.png" alt=""/></th>
+          <td id="text12">
+            <h1>Fire Ignition</h1>
+              <ul id="ul12">
+                <li><span>Instant Ignition:</span><br/>Fire ignitions that light up instantly, ensuring quick and <br/>effortless fire-starting in any situation.</li>
+                <li><span>Reliable Spark:</span> <br/>Dependable spark mechanism for consistent ignition, <br/>eliminating the frustration of failed attempts.</li>
+                <li><span>Safe and User-Friendly:</span> <br/>: Designed with safety in mind, our fire <br/>ignitions are easy to use, making them <br/>suitable for beginners and experts alike.</li>
+                <li><span>Compact and Portable:</span><br/>Compact size for easy storage and portability, <br/>allowing you to carry them wherever <br/>you need a reliable ignition source.</li>
               </ul>
           </td>
         </tr>
