Completely finished layout - working on final touches

--- a/Assignments/Assignment3/main.html
+++ b/Assignments/Assignment3/main.html
@@ -62,11 +62,11 @@
     <div class="main2">
       <table>
         <tr class="tr">
-          <th id="img32"><img src="Images/Edited/image3.png" alt=""/></th>
+          <th id="twoimg3"><img src="Images/Edited/image3.png" alt=""/></th>
 
-          <td id="text32">
+          <td id="twotext3">
             <h1>Charcoal Briquettes</h1>
-              <ul id="ul32">
+              <ul id="twoul3">
                 <li><span>High-Quality Briquettes:</span> <br/>Premium charcoal briquettes for consistent heat <br/>and optimal grilling results.</li>
                 <li><span>Long Burn Time:</span> <br/>Extended burn duration for prolonged cooking <br/>sessions, ensuring your barbecue stays hot.</li>
                 <li><span>Even Heat Distribution:</span> <br/>Provides uniform heat across the grill, <br/>preventing unevenly cooked food.</li>
@@ -75,10 +75,10 @@
           </td>
         </tr>
         <tr>
-          <th id="img22"><img src="Images/Edited/image2.png" alt=""/></th>
-          <td id="text22">
+          <th id="twoimg2"><img src="Images/Edited/image2.png" alt=""/></th>
+          <td id="twotext2">
             <h1>Large Eco Kindling</h1>
-              <ul id="ul22">
+              <ul id="twoul2">
                 <li><span>Eco-Friendly:</span> <br/>Crafted from sustainable materials, <br/>reducing your environmental impact.</li>
                 <li><span>Quick Ignition:</span> <br/>Swift and hassle-free fire-starting <br/>without harmful chemicals.</li>
                 <li><span>Clean Burning:</span> <br/>Minimal smoke and residue, ensuring <br/>a greener experience.</li>
@@ -87,10 +87,10 @@
           </td>
         </tr>
         <tr>
-          <th id="img12"><img src="Images/Edited/image1.png" alt=""/></th>
-          <td id="text12">
+          <th id="twoimg1"><img src="Images/Edited/image1.png" alt=""/></th>
+          <td id="twotext1">
             <h1>Fire Ignition</h1>
-              <ul id="ul12">
+              <ul id="twoul1">
                 <li><span>Instant Ignition:</span><br/>Fire ignitions that light up instantly, ensuring quick and <br/>effortless fire-starting in any situation.</li>
                 <li><span>Reliable Spark:</span> <br/>Dependable spark mechanism for consistent ignition, <br/>eliminating the frustration of failed attempts.</li>
                 <li><span>Safe and User-Friendly:</span> <br/>: Designed with safety in mind, our fire <br/>ignitions are easy to use, making them <br/>suitable for beginners and experts alike.</li>
